feat: v2 rename koperasi menjadi titik kumpul, peran PETUGAS, selisih_jaminan_atap (bagian 2)
